fixing list on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,7 +29,7 @@ body {
   width: 700px;
   margin: 0 auto;
   margin-top: 10px;
-  max-width: 100%;
+  max-width: 90%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
@@ -166,19 +166,15 @@ img {
   height: 30px;
 }
 
-/* ocultar checkbox */
+/* ocultar checkbox e iconos svg  */
+#openMenu,
+#closeMenu,
 #nav__checkbox {
   display: none;
 }
 
-/* ocultar svg de closeMenu y openMenu */
-.nav__toggle .close,
-{
-border: 1px solid var(--black);
-}
 
 .nav {
-  border: 1px solid var(--black);
   grid-area: nav;
 }
 
@@ -186,7 +182,9 @@ border: 1px solid var(--black);
 .container-4 {
   display: grid;
   grid-area: container-4;
-  align-items: stretch;
+  align-items: center;
+  width: 100%;
+
 }
 
 .nav__menuElements {
@@ -233,6 +231,7 @@ border: 1px solid var(--black);
   display: grid;
   grid-area: container-5;
   margin-top: 10px;
+  max-width: 100%;
 }
 
 /* Texto párrafo. */
@@ -310,63 +309,62 @@ border: 1px solid var(--black);
   }
 
 
-  .nav__menu {
+  .nav__menuElements {
     position: relative;
     top: 0px;
     width: 90%;
   }
 
-  .nav__menu:last-child {
+  .nav__menuElements:last-child {
     justify-content: center;
   }
 
   /* mostrar svg hamburger */
-  .nav__toggle .menu {
+  .nav__toggle #openMenu {
     display: block;
     cursor: pointer;
     position: relative;
   }
 
-  /* #nav__checkbox:checked~.container-4 li {
+  #nav__checkbox:checked~.container-4 ul .itemsElements li {
     display: block;
-    position: relative;
   }
 
-  #nav__checkbox:checked~.nav__toggle .menu {
+  /* #nav__checkbox:checked~.nav__toggle .menu {
     display: none;
-  }
+  } */
 
   #nav__checkbox:checked~.nav__toggle .close {
     display: block;
     position: absolute;
 
-  } */
+  }
 
-  /* .profile-photo {
+  .profile-photo {
     padding: 0px;
     align-items: center;
     margin: 10px auto;
-  } */
+  }
 
-  /* .profile-photo img {
+  .profile-photo img {
     width: 150px;
     height: 150px;
     margin: auto;
     max-width: 100%;
-  } */
+  }
 
-  /* .header-section {
+  .header-section {
 
     margin: 10px auto;
-  } */
+  }
 
 
-  /* .btn1,
+  .btn1,
   .btn2,
   .btn3,
   .btn4 {
     font-size: 1.0rem;
-  } */
+  }
 
   /* .container-5 p {
     font-family: 'iA Writer Mono', monospace;
